@@ -1,16 +1,0 @@
-name = Calendar iCal DEPRECATED!
-description = DEPRECATED, Use Date iCal instead.
-dependencies[] = views
-dependencies[] = date_api
-dependencies[] = date_views
-dependencies[] = calendar
-package = Date/Time
-core = 7.x
-hidden = TRUE
-files[] = calendar_ical.install
-files[] = calendar_ical.module
-files[] = calendar_plugin_style_ical.inc
-files[] = calendar_plugin_row_ical_node.inc
-files[] = calendar-style-ical.tpl.php
-files[] = calendar-row-ical-node.tpl.php
-files[] = theme.inc
