@@ -5,6 +5,8 @@ Calendar Module 7.x
 Version 7.x-3.x-dev
 ===================
 
+- Remove Calendar iCal completely.
+- Change default tracking behavior to be off. 
 - Issue #1556180 by hass, Error: Strict warning: Declaration of calendar_plugin_style::options_submit().
 - Issue #1588590, Cannot always unset date link once set.
 - Issue #1565994, Remove default caching from calendar. Let people set it up themselves.
